# recount3

./: .gitignore  CHANGELOG.rst  CITATION.cff  LICENSE  README.rst  TODO.rst  api.html  cli.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  tutorial.html
.github/workflows/: codecov.yml  documentation.yml  package_release.yml  pull_request.yml  pypi.yml  tests.yml
_modules/: index.html
_modules/recount3/: _bigwig.html  _descriptions.html  bundle.html  config.html  errors.html  resource.html  se.html  search.html
_sources/: api.rst.txt
docs/: api.rst  cli.rst  conf.py  guide.rst  index.rst  tutorial.rst
src/: recount3.py
src/recount/: recount3.py
src/recount3/: __init__.py  __main__.py  _bigwig.py  _biocpy.py  _descriptions.py  _utils.py  bundle.py  cli.py  config.py  errors.py  project.py  py.typed  recount3.py  resource.py  se.py  search.py  types.py  version.py
src/recount3/_internal/: __init__.py  bigwig.py  cache.py  fs.py  http.py
test/: test.py
tests/: README.rst  conftest.py  helpers.py  test___init__.py  test___main__.py  test__bigwig.py  test__descriptions.py  test__utils.py  test_bundle.py  test_bundle_stack_counts_cli.py  test_cli.py  test_cli_bundle.py  test_cli_download.py  test_cli_download_zip_and_overwrite.py  test_cli_help_and_version.py  test_cli_ids.py  test_cli_search.py  test_cli_search_modes_and_formats.py  test_cli_smoke_test.py  test_config.py  test_config_env_overrides.py  test_download_exit_codes.py  test_errors.py  test_errors_and_validation.py  test_import_without_pybigwig.py  test_init_logging_levels.py  test_logging_behavior.py  test_manifest_io.py  test_manifest_roundtrip.py  test_package_init.py  test_recount3.py  test_resource.py  test_se.py  test_search.py  test_types.py  test_version.py  test_version_and_types.py
tests/data/: README.rst
tests/data/recount3_mirror/recount3/human/: homes_index
tests/data/recount3_mirror/recount3/human/data_sources/sra/base_sums/15/SRP009615/77/: sra.base_sums.SRP009615_SRR387777.ALL.bw
tests/data/recount3_mirror/recount3/mouse/: homes_index
